fix(panels): remove unwanted whitespace under panels
fixes #274
[fixes #105701926]

--- a/src/pivotal-ui/components/panels/panels.scss
+++ b/src/pivotal-ui/components/panels/panels.scss
@@ -30,6 +30,7 @@ Panels are typically a combination of contours, backgrounds, and content includi
   h1, h2, h3, h4, h5, h6 {
     margin: 0;
   }
+  margin: 0;
   //background-color: transparent; // Bootstrap Override
 }
 
